login activity end

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,27 +2,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.liyanamarket.predictlive">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
+        android:supportsRtl="false"
         android:theme="@style/Theme.PredictLive"
         tools:ignore="AllowBackup">
-        <activity android:name=".SuccessRegisterActivity"></activity>
-        <activity android:name=".LoginProfileActivity" />
-        <activity android:name=".ValidateCodeActivity" />
-        <activity android:name=".NumberActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".activity.SuccessRegisterActivity" />
+        <activity android:name=".activity.LoginProfileActivity" />
+        <activity android:name=".activity.ValidateCodeActivity" />
+        <activity android:name=".activity.NumberActivity" />
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".activity.MainActivity" />
     </application>
 
 </manifest>
