--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:supportsRtl="false"
         android:theme="@style/Theme.PredictLive"
         tools:ignore="AllowBackup">
-        <activity android:name=".activity.ForgetActivity"></activity>
-        <activity android:name=".activity.ForgetActivity"></activity>
+        <activity android:name=".ValidatecoderecoveryActivity"></activity>
+        <activity android:name=".activity.RecoveryActivity" />
+        <activity android:name=".activity.ForgetActivity" />
+        <activity android:name=".activity.ForgetActivity" />
         <activity android:name=".activity.PredictActivity" />
         <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.SuccessRegisterActivity" />
