--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,9 +14,8 @@
         android:supportsRtl="false"
         android:theme="@style/Theme.PredictLive"
         tools:ignore="AllowBackup">
-        <activity android:name=".ValidatecoderecoveryActivity"></activity>
+        <activity android:name=".ValidatecoderecoveryActivity" />
         <activity android:name=".activity.RecoveryActivity" />
-        <activity android:name=".activity.ForgetActivity" />
         <activity android:name=".activity.ForgetActivity" />
         <activity android:name=".activity.PredictActivity" />
         <activity android:name=".activity.HomeActivity" />
